--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=custodia
 server.port=8083
-server.servlet.context-path=/custodia
+server.servlet.context-path=/api/cavapy/custodia
 
 #doc
 springdoc.api-docs.path=/api-docs
