--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=custodia
 server.port=8083
-server.servlet.context-path=/api/custodia
+server.servlet.context-path=/api/v1
 
 #doc
 springdoc.api-docs.path=/api-docs
